<resources>
    <string name="app_name">Balancing Chemical Equations</string>

    <string name="compound_format_error">%s is not properly formatted.</string>
    <string name="balanced_cannot_error">This equation cannot be balanced.</string>
    <string name="balanced_infinite_error">There are infinite solutions for this equation.</string>
    <string name="element_not_exist_error">%s is not a valid Element.</string>
    <string name="reactant_empty_error">Reactants are empty or not formatted correctly.</string>
    <string name="products_empty_error">Products are empty or not formatted correctly.</string>

    <string name="reactants">Reactants</string>
    <string name="products">Products</string>
    <string name="reactants_example">Ex. "K4Fe(CN)6 + H2SO4 + H2O"</string>
    <string name="products_example">Ex. "K2SO4 + FeSO4 + (NH4)2SO4 + CO"</string>
    <string name="balance_equation">Balance Equation</string>
</resources>
